--- a/_posts/webhacking/basics/HTML/2021-01-22-HTML(1).md
+++ b/_posts/webhacking/basics/HTML/2021-01-22-HTML(1).md
@@ -22,16 +22,16 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
     * 내용 표현에 집중
 
 ## 기본문법 태그
- 일상적으로 사용하는 태그 - 그 물건이 무엇인지 설명해준다.
- HTML에서의 태그도 똑같은 의미이다. 말그대로 strong이라는 태그는 dreating web pages가 중요하다, 진하게 표시한다 라는 것을 의미한다.
- \<u> - underline
- \<h1> - heading (숫자가 클수록 작아짐)
+ 일상적으로 사용하는 태그 - 그 물건이 무엇인지 설명해준다.  
+ HTML에서의 태그도 똑같은 의미이다. 말그대로 strong이라는 태그는 dreating web pages가 중요하다, 진하게 표시한다 라는 것을 의미한다.  
+ \<u> - underline  
+ \<h1> - heading (숫자가 클수록 작아짐)  
 
      <h1>HTML</h1>
      <strong>creating <u>web</u> pages</strong>
 
- \<br> - 줄바꿈, 코드에선 한줄이 떨어져있어도 웹페이지에선 보이지 않음(줄바꿈이라는 시각적 의미만 있기때문에 닫는태그 없음)
- \<p> - 단락 (단락의 시작과 끝 존재 -> 열리는태그, 닫는 태그 존재), 정보로서 가치있게 만들어줌
+ \<br> - 줄바꿈, 코드에선 한줄이 떨어져있어도 웹페이지에선 보이지 않음(줄바꿈이라는 시각적 의미만 있기때문에 닫는태그 없음)  
+ \<p> - 단락 (단락의 시작과 끝 존재 -> 열리는태그, 닫는 태그 존재), 정보로서 가치있게 만들어줌  
 
 ## HTML이 중요한 이유
 
@@ -39,8 +39,8 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
         coding                             vs           <h3> coding <h3>
      </span>
  
- 두 방식의 차이?
- 검색엔진은 전세계의 모든 웹페이지의 코드를 다운받아 그 코드를 분석을 한다.
+ 두 방식의 차이?  
+ 검색엔진은 전세계의 모든 웹페이지의 코드를 다운받아 그 코드를 분석을 한다.  
  h태그로 감싸진 코드는 제목이 coding라는 것을 의미하는 코드이고, span태그로 감싸진 코드는 coding이 제목인 것처럼 보이는 코드이다.
  따라서 검색엔진에 coding을 검색했을 때 h태그의 내용이 먼저 보일것이다.
 
@@ -48,9 +48,9 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
 
 ## 속성 & img
  태그의 이름만으로 정보가 부족할 때 속성을 통해 많은 의미를 부가한다.
- '''
-    <img src="파일위치" width="100%">
- '''
+ 
+     <img src="파일위치" width="100%">
+ 
  \<img>만으로는 어떤 사진인지, 크기를 어느정도로 표현하고 싶은지 알 수 없다. 그래서 속성을 이용하여 추가적인 정보를 부여한다.
 
 ## 부모자식과 목록
@@ -59,17 +59,17 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
         <child></child>
      </parent>
  
- 반드시 부모자식이 붙어다니는 태그가 있다.
- \<li>태그의 항목들은 어디부터 어디까지가 연관된 항목인지 경계를 짖기위한 부모태그 <ul>을 가진다.
- \<ol>태그는 숫자가 자동으로 넘버링된다.(ordered list)
+ 반드시 부모자식이 붙어다니는 태그가 있다.  
+ \<li>태그의 항목들은 어디부터 어디까지가 연관된 항목인지 경계를 짖기위한 부모태그 \<ul>을 가진다.  
+ \<ol>태그는 숫자가 자동으로 넘버링된다.(ordered list)  
  \<table>태그 같은경우 '\<table>\<tr>\<td>\</td>\</tr>\</table>'과 같은 구성으로 3대가 같이다닌다.
 
 
 ## 문서를 잘 정리정돈 하기위한 구조
- \<title>태그 : 사용자에게 명시적으로 알려줌, 검색엔진은 이 태그를 책으로치면 책표지와 같은 정보로 사용한다.
- \<meta charst="utf-8"> : 해당 웹페이지를 열때 웹브라우저가 utf-8방식으로 문서를 읽도록 하는 태그
+ \<title>태그 : 사용자에게 명시적으로 알려줌, 검색엔진은 이 태그를 책으로치면 책표지와 같은 정보로 사용한다.  
+ \<meta charst="utf-8"> : 해당 웹페이지를 열때 웹브라우저가 utf-8방식으로 문서를 읽도록 하는 태그  
 
- 위의 두 태그는 본문을 설명하는 태그들로 본문과는 구별된다.
+ 위의 두 태그는 본문을 설명하는 태그들로 본문과는 구별된다.  
  따라서 본문은 '\<body>' 태그로 묶고, 본문을 설명하는 부분은 '\<head>' 로 묶는다. 모든 태그들은 \<body>태그의 하위나 \<head>의 하위에 위치한다.
- 또 \<body>, \<head>태그를 감싸는 최고위층 태그로 \<html>태그가 존재한다.
+ 또 \<body>, \<head>태그를 감싸는 최고위층 태그로 \<html>태그가 존재한다.  
  \<!DOCTYPE html>은 이 문서가 html문서라는 것을 알려준다. 어느 웹사이트의 페이지소스든 이 태그들을 가지고 있다.
