--- a/_posts/webhacking/basics/HTML/2021-01-22-HTML(1).md
+++ b/_posts/webhacking/basics/HTML/2021-01-22-HTML(1).md
@@ -9,7 +9,7 @@ tag :
 ---
 WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
 
- 기존에 html과 css를 공부했었는데, '생활코딩' 을 바탕으로 가볍게 정리한 내용이다.
+ 기존에 html과 css를 공부했었는데, `생활코딩` 을 바탕으로 가볍게 정리한 내용이다.
 
 ## HTML 특징 및 단점
  1. 장점
@@ -62,7 +62,7 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
  반드시 부모자식이 붙어다니는 태그가 있다.  
  \<li>태그의 항목들은 어디부터 어디까지가 연관된 항목인지 경계를 짖기위한 부모태그 \<ul>을 가진다.  
  \<ol>태그는 숫자가 자동으로 넘버링된다.(ordered list)  
- \<table>태그 같은경우 '\<table>\<tr>\<td>\</td>\</tr>\</table>'과 같은 구성으로 3대가 같이다닌다.
+ \<table>태그 같은경우 `<table><tr><td></td></tr></table>`과 같은 구성으로 3대가 같이다닌다.
 
 
 ## 문서를 잘 정리정돈 하기위한 구조
@@ -70,9 +70,10 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
  \<meta charst="utf-8"> : 해당 웹페이지를 열때 웹브라우저가 utf-8방식으로 문서를 읽도록 하는 태그  
 
  위의 두 태그는 본문을 설명하는 태그들로 본문과는 구별된다.  
- 따라서 본문은 '\<body>' 태그로 묶고, 본문을 설명하는 부분은 '\<head>' 로 묶는다. 모든 태그들은 \<body>태그의 하위나 \<head>의 하위에 위치한다.
+ 따라서 본문은 `<body>` 태그로 묶고, 본문을 설명하는 부분은 `<head>` 로 묶는다. 모든 태그들은 \<body>태그의 하위나 \<head>의 하위에 위치한다.
  또 \<body>, \<head>태그를 감싸는 최고위층 태그로 \<html>태그가 존재한다.  
- \<!DOCTYPE html>은 이 문서가 html문서라는 것을 알려준다. 어느 웹사이트의 페이지소스든 이 태그들을 가지고 있다.
+ `<!DOCTYPE html>`은 이 문서가 html문서라는 것을 알려준다. 어느 웹사이트의 페이지소스든 이 태그들을 가지고 있다.
+    ```
      <!DOCTYPE html>//html문서임을 알려줌
      <html>
          <head>
@@ -82,4 +83,5 @@ WebHacking 기초 - HTML(1) (HYPERTEXT MARKUP LANGUAGE)
             ////본문
          </body>
      </html>
+    ```
 
