--- a/_posts/webhacking/basics/HTML/2021-01-23-HTML(2).md
+++ b/_posts/webhacking/basics/HTML/2021-01-23-HTML(2).md
@@ -9,11 +9,11 @@ tag :
 ---
 WebHacking 기초 - HTML(2) (HYPERTEXT MARKUP LANGUAGE)
 
-## HTML태그의 제왕 <a>태그
+## HTML태그의 제왕 \<a>태그
  ```html
  <a href="링크주소"> 주소설명 </a>
  ```
- 모든 검색엔진들이 링크를 클릭하면 해당 페이지로 이동하게된다. 이 태그 덕분에 검색엔진들이 전세계의 웹을 항해하면서 웹페이지를 발견할 수 있다.
+ 모든 검색엔진들이 링크를 클릭하면 해당 페이지로 이동하게된다. 이 태그 덕분에 검색엔진들이 전세계의 웹을 항해하면서 웹페이지를 발견할 수 있다.  
  anchor의 첫글자 a를 따와, 정보의 바다에 정박한다는 의미이다. 서로 연관된 페이지들을 연결해주는 길의 역할을 하는 것이다.
 
 ## 원시웹
@@ -23,12 +23,13 @@ WebHacking 기초 - HTML(2) (HYPERTEXT MARKUP LANGUAGE)
   인터넷과 웹은 다른 것이다. 인터넷이 길이라면 웹은 길위의 자동차와 같다.  
   인터넷이 웹을 만나 대중화되었다. 최초의 웹이 웹이 되기 위해서 필요한 본질만 담고있다.
   앞의 배운것들만 가지고 웹브라우저에서 보여주는 전자문서를 만들 수 있게 되었다.  
-  이 문서를 전세계누구나 컴퓨터나 인터넷, 웹이 있다면 마치 자신의 문서처럼 볼 수 있도록
-  (img-팀버너스리가 최조로 만든 초기의 웹사이트)
+  ![팀버너스리가 최조로 만든 초기의 웹사이트](/assets/images/primitiveWeb.PNG)
+    
+    
 
+ ### internet이 동작하는 가장 기본적인 원리  
 
- ### internet이 동작하는 가장 기본적인 원리
-  (img-작동원리)
+  ![작동원리](/assets/images/internet.PNG)
   
   공유하고자 하는 문서를 웹서버에 올리면 해당 문서를 컴퓨터나 인터넷, 웹을 가지고 있는 전세계누구나 마치 자신의 문서처럼 볼 수 있게된다.
 
