--- a/_posts/webhacking/basics/CSS/2021-01-24-CSS.md
+++ b/_posts/webhacking/basics/CSS/2021-01-24-CSS.md
@@ -16,13 +16,13 @@ WebHacking 기초 - CSS (Cascading Style Sheets)
 ## CSS가 등장하기 이전
  디자인과 관련된 새로운 태그를 추가하는 방법과, 디자인에 최적화된 언어를 만드는 두가지 방법중 초기에는 새로운 태그를 추가하는 방식으로 진행
 
- ```HTML
+ ```html
  <!--이제는 사용하지 않는 태그이다-->
  <font color="red"> color </font>
  ```
 
 
- ### 기존의 태그와 다른점? (한계)
+### 기존의 태그와 다른점? (한계)
 
   예를 들어, 아래의 코드를 보자.
   ```html
@@ -36,7 +36,7 @@ WebHacking 기초 - CSS (Cascading Style Sheets)
   또한 색을 바꿀때마다 모든 \<font>태그의 속성을 바꿔야되서 번거롭다.  
   이러한 이유로 CSS가 등장하게 되었다.
 
-
+---
 ## CSS
  ```html
  <style>
@@ -46,28 +46,34 @@ WebHacking 기초 - CSS (Cascading Style Sheets)
     }
  </style>
   ```
+
   ### 장점
   * 중복을 제거해준다.
+
   ```html
   <a href="index.html"><font color="red">1</font></a>
   <a href="index.html"><font color="red">2</font></a>
   <a href="index.html"><font color="red">3</font></a>
-  ------------------------------------------
+    ------------------------------------------
   <style>
     a {
         color : red;
     }
   </style>
   ```
+
   * html이 정보전달에 집중
   * 디자인과 관련된 내용이 \<style>안에만 존재하여 코드를 분석하기 편리
 
 ## CSS의 기본 문법
  * html내에 직접 스타일 적용(style속성으로 html이다/inline style)
+
  ```html
- <a href="index.html" style="color : red"> hom e</a>
+ <a href="index.html" style="color : red"> home</a>
  ``` 
+
  * style 
+
  ```html
  <style>
     a <!-- 선택자,selector --> {
@@ -77,19 +83,24 @@ WebHacking 기초 - CSS (Cascading Style Sheets)
     }
  </style>
  ```
+
  모든 a태그에 대해 동일하게 적용된다. 만약 하나의 a태그에만 밑줄을 주고싶다면, 해당 태그에 style속성을 추가해준다.
+
  ```html
  <a href="index.html" style="text-decoration : underline"> hom e</a>
  ```
 
 ## class VS id
- ![css예시](/assets/images/css_selector_ex1.PNG)
- 위의 내용을 보면 2번째의 a태그는 2개 class의 영향을 받고있는데, 빨간색으로 표현되었다. **그 이유는 무엇일까?**
+ ![css예시](/TIL/assets/images/css_selector_ex1.PNG)
+ 위의 내용을 보면 2번째의 a태그는 2개 class의 영향을 받고있는데, 빨간색으로 표현되었다.   
+ **그 이유는 무엇일까?**  
  active가 나중에 등장했기 때문이다. 만약 .active와 .saw의 순서가 바뀌었다면, 해당내용은 회색으로 표현될 것이다.  
+
  **css의 순서에 상관없이 일정한 결과를 얻으려면?**  
  우선순위가 더 높은 id를 이용하는 방법이 있다.
- ![id,class예시](/assets/images/css_selector_ex2.PNG)
+ ![id,class예시](/TIL/assets/images/css_selector_ex2.PNG)
+
  **이런 차이가 존재하는 이유는?**  
  우선순위가 태그 < class < id 순으로 높기때문이다.
  포괄적으로 디자인한 후 예외가 있는 부분을 id로 딱,딱 찍어가면서 처리를 하는 것이다. 따라서  위 예제의 2번째 a태그의 경우, 총 3개의 css에 포함되는데 id의 우선순위가 제일 높기 때문에 id의 style이 적용되는 것이다. 태그보다 class가 구체적이고, class보다 id가 구체적인것이다. id의 경우, 동일한 id는 하나만 가지는 것이 원칙이다.
- ![id,class,태그범위](/assets/images/selector.PNG)
+ ![id,class,태그범위](/TIL/assets/images/selector.PNG)
