--- a/_posts/webhacking/basics/CSS/2021-01-24-CSS.md
+++ b/_posts/webhacking/basics/CSS/2021-01-24-CSS.md
@@ -41,7 +41,7 @@ WebHacking 기초 - CSS (Cascading Style Sheets)
  ```html
  <style>
     <!-- css의 문법에 맞게 해석해서 처리하도록 하는 html태그 -->   
-    선택자(태그,id,class,..) {
+    선택자(태그, #id, .class,..) {
         속성(property) : 값(value);
     }
  </style>
