--- a/_posts/webhacking/basics/PHP/2021-01-31-PHP(2).md
+++ b/_posts/webhacking/basics/PHP/2021-01-31-PHP(2).md
@@ -12,7 +12,7 @@ WebHacking 기초 - PHP(2)
 
 ## PHP원리
 
- ![php원리](/TIL/assets/images/php.PNG)
+ ![php원리](/TIL/assets/images/php.png)
 
  `확장자가 .html`이면 웹서버는 파일을 그대로읽어 그대로 전송한다. 따라서 언제나 같은 내용이 출력된다.  
  `확장자가 .php`이면 웹서버는 \<?php  ?>부분을 php프로그램에 위임한다. 따라서 리로드 할 때마다 코드에 따라 달라지는 동적인 페이지가 생성된다.
@@ -55,8 +55,111 @@ WebHacking 기초 - PHP(2)
  </script>
  <?php
     $a = 1 // php에서의 변수선언
-    echo $a + 1;
+    echo $a + 1; // 2 출력
  ?>
  ```
 
  똑같은 단어가 수백번 등장했을 때, 변수를 사용한다면 한번에 빠짐없이 바꿀 수 있어 편리하다.
+
+
+## PHP URL 파라미터
+ > http://127.0.0.1/test.php?name=haeun&address=%EC%84%9C%EC%9A%B8
+
+ 위의 url에서 ? 뒷부분의 내용을 url 파라미터라고 한다. 파라미터와 파라미터 사이는 &로 구분한다.
+
+
+ **php에서 URL 파라미터 받아오는 방법**
+
+ ```html
+ <!DOCTYPE html>
+ <html>
+    <head></head>
+    <body>
+        안녕하세요, <?php echo $_GET['address']; ?>에 사시는
+        <?php echo $_GET['name']; ?>님
+    </body>
+ </html>
+ ```
+ 
+ `$_GET[]`방식을 이용하여 URL 파라미터를 받아온다.  
+
+
+ _결과화면_  
+ ![urlparameter](/TIL/assets/images/URLpara.PNG)  
+ PHP가 URL 파라미터로 이름과 주소를 받아 HTML로 만든 후 전달하여 화면에 출력한다.
+
+
+ **URL 파라미터 활용**
+ 
+ ```html
+ <!DOCTYPE html>
+ <html>
+    <head></head>
+    <body>
+        <h1> WEB </h1>
+        <ol>
+            <li><a href="index.php?id=HTML">HTML</a></li>
+            <li><a href="index.php?id=CSS">CSS</a></li>
+            <li><a href="index.php?id=JavaScript">JAVASCRIPT</a></li>
+        </ol>
+        <h2>
+            <?php
+                echo $_GET['id'];
+            ?>
+        </h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut deserunt 
+        recusandae illo eaque perspiciatis aliquam ipsa eos tempora veniam, 
+        esse fugiat under rerum quis harum doloremque
+        non dignissimos molestias aliquid!
+    </body>
+ </html>
+ ```
+
+ id 값에 따라 리스트 아래의 소제목이 바뀌는 것을 확인할 수 있다.
+ ![urlparameter 활용](/TIL/assets/images/urlparameter.PNG)  
+
+ 
+## 함수의 사용
+ **내장함수**
+
+ ```php
+ <?php
+    $str = "hello 
+            
+    world!";
+    echo strlen($str);      // 문자열 길이 출력
+    echo $str;              // hello world! 출력 -- 줄바꿈(\n) : 웹은 무시
+    echo nl2br($str);       // hello
+                            //
+                            // world! 출력 -- 줄바꿈(\n)을 <br>로 바꿈
+ ?>
+ ```
+
+ **내장함수 활용**
+
+ ```html
+ <!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
+        <h1> WEB </h1>
+        <ol>
+            <li><a href="index.php?id=html">HTML</a></li>
+            <li><a href="index.php?id=css">CSS</a></li>
+            <li><a href="index.php?id=javascript">JAVASCRIPT</a></li>
+        </ol>
+        <h2>
+            <?php
+                echo $_GET['id'];
+            ?>
+        </h2>
+        <?php 
+            echo file_get_contents("data/".$_GET['id']); <!--파일을 읽어오는 함수-->
+        ?>
+    </body>
+ </html>
+ ```
+ 
+ 결과  
+ id에 따라 소제목뿐만 아니라 본문 내용도 달라지는 것을 볼 수 있다.  
+ ![내장함수](/TIL/assets/images/func.PNG)
