--- a/_posts/webhacking/basics/PHP/2021-02-02-PHP(4).md
+++ b/_posts/webhacking/basics/PHP/2021-02-02-PHP(4).md
@@ -24,6 +24,7 @@ Delete
  사용자로부터 데이터를 받아올 수 있도록 하는 태그를 이용해 입력창을 만들고, 전송버튼을 만든다.
 
  ```html
+ <!--test.php-->
  <!DOCTYPE html>
  <html>
     <body>
@@ -35,6 +36,7 @@ Delete
     </body>
  </html>
  ```
+
  **input tag**  
  `type` - text이면 입력창, button이면 버튼이 출력된다.  
  `name` - 입력된 값이 name에 지정된 이름으로 전달된다.  
@@ -42,3 +44,76 @@ Delete
  ![위의 코드 form](/TIL/assets/images/form.PNG)  
  type의 값이 submit이면 해당 input태그를 감싸고 있는 form태그의 action속성이 가리키는 url로 url을 바꾸면서 입력창의 내용을 url파라미터로 붙여 전달한다.  
  ![form Submit](/TIL/assets/images/formSubmit.PNG)
+
+ ```html
+ <!--form.php-->
+ <?php
+ file_put_contents('data/'.$_GET['title'], $_GET['description']);
+ ?>
+ ```
+
+ `file_put_contents(filename, data)` - 파일에 데이터를 쓰는 함수로 filename과 같은 파일이 있으면 해당 파일에 데이터를 쓰고, 없으면 filename의 파일을 생성하여 데이터를 쓴다.
+
+ > **하지만 url주소로 서버에 파라미터를 전달하는 것은 좋은 방식이 아니다.**
+ 
+ [test.php?title=php&description=PHP+is+...](test.php?title=php&description=PHP+is+...)의 링크를 클릭했을 때, 클릭한 사용자는 자신이 의도하지않은 글이 써지는 문제가 일어날 수 있다.
+
+ >**url을 쓰지않고 은밀하게 서버에 정보를 전달해야할 때 `POST`방식 이용!!**
+
+ GET방식은 북마크 용도로 적합하다.
+
+
+## POST 방식
+ GET방식과 다른 점이 있다면 form태그의 method속성을 post로 지정해주는 것이다. method를 지정하지않으면 GET방식이 기본값이다. `$_GET`은 GET방식으로 URL을 통해서 전달받는 것이다. 따라서 전달받는 파일도 `$_POST`방식으로 파라미터를 전달받도록 변경해주어야 한다.
+
+ ```html
+ <!--test.php-->
+ <form action="form.php" method="post">
+ <!--form.php-->
+ <?php
+ file_put_contents('data/'.$_POST['title'], $_POST['description']);
+ ?>
+ ```
+
+ 위와 같은 방식으로 바꾸면 URL이 바뀌지 않고 서버로 정보를 전달할 수 있다.
+ 
+
+## 글생성 - 웹앱
+ 사용자가 글을 생성할 수 있는 페이지를 만들 것이다. creat.php의 파일을 만들고 제목과 내용을 전달할 수 있는 input form을 만들었다.
+
+ ```html
+ <a href="create.php">create</a>
+ <form action="create_process.php" method="post">
+    <p>
+        <input type="text" name="title" placeholder="Title">
+    </p>
+    <p>
+        <textarea name="description" placeholder="Description"></textarea>
+    </p>
+    <p>
+        <input type="submit">
+    </p>
+ </form>
+ ```
+
+ submit을 누르면 create_process.php파일로 해당 내용을 전달한다.
+ 
+ ```php
+ <?php
+ file_put_contents('data/'.$_POST['title'],$_POST['description']);
+ header('Location: /index.php?id='.$_POST['title'])//redirection : 사용자를 다른 페이지로 보내는 함수
+ ?>
+ ```
+
+ **결과**
+ ![글 생성](/TIL/assets/images/webapp1.PNG)  
+
+
+## 글 수정 - 웹앱
+ 1. 글 수정은 특정글을 선택했을 때에만 나와야 한다. 따라서 조건문을 이용한다.  
+ 2. 수정을 원하는 페이지를 알아야하므로 id값을 전달해야한다. 
+ 3. 기존의 내용을 바꾸는 것이므로 수정을 위한 입력창에 기본값으로 기존 내용이 채워져 있어야한다(value속성 이용).
+ 4. 파일의 이름이 수정된다면(rename함수 이용) 기존의 이름도 같이 보내줘야된다.(hidden이용)  
+    기존의 이름은 현재 페이지북마크(id)에 있다. `title`은 새로운이름, `old_title`는 기존의 이름이다.
+ 
+ 
