--- a/_posts/webhacking/basics/JS/2021-01-28-JS(3).md
+++ b/_posts/webhacking/basics/JS/2021-01-28-JS(3).md
@@ -135,7 +135,8 @@ WebHacking 기초 - JavaScript(3)
  **Application Programming Interface**
  앱 입장에서의 대화를 위한 접점이다. 대화라는 것은 예를들어, alert("hello world");를 실행하였을 때 웹브라우저가 해당 팝업을 띄워주는 것을 말한다.
 
- ![UI vs API](/TIL/assets/images/UIvsAPI.PNG)
+ ![UI vs API](/TIL/assets/images/UIvsAPI.PNG)  
+ ![UI vs API](/TIL/assets/images/UIvsAPI(2).PNG)
 
 ---
 추가 공부가 필요할 때
