--- a/_posts/webhacking/basics/PHP/2021-02-02-PHP(4).md
+++ b/_posts/webhacking/basics/PHP/2021-02-02-PHP(4).md
@@ -12,7 +12,7 @@ WebHacking 기초 - PHP(4)
 앞의 내용을 이용하여 방문자도 웹을 통해 컨텐츠 작성할 수 있는 웹앱 만들기
 
 
-정보시스템에서 제일 먼저 해야될 것
+정보시스템에서 제일 먼저 해야될 것  
 Create  
 Read  
 Update  
@@ -115,5 +115,76 @@ Delete
  3. 기존의 내용을 바꾸는 것이므로 수정을 위한 입력창에 기본값으로 기존 내용이 채워져 있어야한다(value속성 이용).
  4. 파일의 이름이 수정된다면(rename함수 이용) 기존의 이름도 같이 보내줘야된다.(hidden이용)  
     기존의 이름은 현재 페이지북마크(id)에 있다. `title`은 새로운이름, `old_title`는 기존의 이름이다.
+ 5. 파일의 내용이 수정된다면, 기존의 방식대로 새로운 이름(`title`)에 해당 내용을 추가하면 된다.
+
+ ```html
+ <!--update.php-->
+ <a href="create.php">create</a>
+ <?php if(isset($_GET['id'])) {?>
+ <a href="update.php?id=<?=$_GET['id'];?>">update</a> <!--php echo를 이용하는 경우 =으로 바꿔줄 수 있음-->
+ <?php }?>
+        
+ <form action="update_process.php" method="post">
+    <input type="hidden" name="old_title" value="<?=$_GET['id']?>">
+    <p>
+        <input type="text" name="title" placeholder="Title" value="<?php print_title();?>">
+    </p>
+    <p>
+        <textarea name="description" placeholder="Description"><?php print_description();?></textarea>
+    </p>
+    <p>
+        <input type="submit">
+    </p>
+ </form>
+
+ <!--update_process.php-->
+ <?php
+ rename('data/'.$_POST['old_title'], 'data/'.$_POST['title']);
+ file_put_contents('data/'.$_POST['title'], $_POST['description']);
+ header('Location: /index.php?id='.$_POST['title']);
+ ?>
+ ```
  
+ ![글 수정](/TIL/assets/images/webapp2.PNG)  
+
+
+
+## 글 삭제 - 웹앱
+ 1. 글 삭제도 수정과 마찬가지로 특정글을 선택했을 때에만 나와야한다.
+ 2. 삭제는 생성, 수정과 다르게 form을 거칠 필요가 없다. 그냥 누르면 삭제되도록 한다.
+ 3. 파일 삭제에는 unlink(filename)를 이용한다. 
+ 4. 삭제를 누르자 마자 삭제가 된다면, 해당 링크를 보냈을 때 의도와 상관없이 글을 지우게 된다. 따라서 `POST`방식을 이용해야한다.
+
+ ```html
+ <!--index.php-->
+ <a href="create.php">create</a>
+ <?php if(isset($_GET['id'])) {?>
+    <a href="update.php?id=<?=$_GET['id'];?>">update</a>
+    <form action="delete_process.php" method="post">
+        <input type="hidden" name="id" value="<?=$_GET['id']?>">
+        <input type="submit" value="delete">
+    </form>
+ <?php }?>
+ <!--delete_process.php-->
+ <?php
+ unlink('data/'.$_POST['id']);
+ header('Location: /index.php');
+ ?>
+ ```
+
+ ![글 삭제](/TIL/assets/images/webapp3.PNG)    
+ 
+
+## 외부 PHP파일 가져오기 - require
+ 코드의 재사용이 가능해지고, 중복을 제거하여 유지보수에 편하다. 재사용할 수 있는 로직들을 라이브러리라고 한다. 반복되는 부분이 보여지는 부분이라면 view라는 폴더에 모아둔다.  
+
+ php 에서는 한번 정의된 함수는 재정의할 수 없도록 되어있다. 이런 경우 require_once를 사용한다. 다른 파일에서 해당 라이브러리를 require했다면 다시 require하지 않도록 하는 것이다.
+
+ ```php
+ <?php
+ require('파일명');
+ require_once('파일명');
+ ?>
+ ```
+
  
