--- a/_posts/webhacking/basics/MySQL/2021-02-04-MySQL(2).md
+++ b/_posts/webhacking/basics/MySQL/2021-02-04-MySQL(2).md
@@ -27,3 +27,106 @@ WebHacking 기초 - MySQL(2)
 
 
 ## SELECT - 테이블 읽기
+ * 모든 데이터 읽기
+    
+    ```
+    SELECT * FROM (tablename);
+    ```
+
+ * table에서 특정 column 읽기
+
+    ```
+    SELECT (column1, column2, ...) FROM (tablename);
+    ```
+
+ * 조건에 맞는 record만 읽기
+
+    ```
+    SELECT (column1, ...) FROM (tablename) WHERE (조건 ex. author='haeun');
+    ```
+
+ * 정렬하여 읽기
+
+    ```
+    SELECT (column1, ...) FROM (tablename) WHERE (조건) ORDER BY (column) (DESC-내림차순);
+    ```
+
+ * 화면에 출력하는 record 수 제한
+
+    ```
+    SELECT (column1, ...) FROM (tablename) WHERE (조건) ORDER BY (column) (DESC, ..) LIMIT (num);
+    ```
+
+
+## UPDATE - 테이블 수정
+ * 특정 record(ex. id=2)의 column수정  
+    여기서 WHERE(특정 record)이 없으면 해당 테이블 column의 모든 값들이 바뀐다.
+
+    ```
+    UPDATE (tablename) SET (column1 = 'value', ....) WHERE id=2;
+    ```
+
+
+## DELETE - 테이블 record 삭제
+ * 특정 record 삭제  
+    여기서 WHERE(특정 record)이 없으면 해당 테이블이 전부 삭제된다.
+
+    ```
+    DELETE FROM (tablename) WHERE (조건 ex. id=2);
+    ```
+
+
+## 관게형 DB의 필요성
+ tablename - topic
+
+ |id|title|description|author|profile|
+ |----|-----|---------|------|--------|
+ |1|MySQL|MySQL is ...|haeun|student|
+ |2|Oracle|Oracle is ...|haeun|student|
+ |3|SQL Server|SQL server is ...|duru|database administrator|
+ |4|PostgreSQL|PostgreSQL is ...|hahh|data scientist|
+ |5|MongoDB|MongoDB is ...|haune|student|
+
+ 위의 테이블이 있다고 하자. author의 haeun의 profile을 수정하고 싶다면 3번의 일을 해야한다. 만약 3개가 아니라 수백개라면 수백번 수정해야한다. 이 테이블을 2개로 나눠보자.
+ 
+ tablename - author
+
+ |id|name|profile|
+ |--|--|--|
+ |1|haeun|student|
+ |2|duru|database administrator|
+ |3|hahh|data scientist|
+
+ tablename - topic
+
+ |id|title|description|author_id|
+ |----|-----|---------|------|
+ |1|MySQL|MySQL is ...|1|
+ |2|Oracle|Oracle is ...|1|
+ |3|SQL Server|SQL server is ...|2|
+ |4|PostgreSQL|PostgreSQL is ...|3|
+ |5|MongoDB|MongoDB is ...|1|
+
+ 하나의 테이블을 두개로 나누면서, author의 profile을 수정하고 싶다면 author테이블에서 한번만 수행하면된다. 또, 만약 동명에 profile까지 같은 author이 있다면 id를 다르게 하여 다른 author라는 것이 구분가능하게 된다.
+
+ `테이블을 나누기 전의 장점`은 모든 column이 하나의 표에 다 들어나 직관적으로 볼 수 있다는 것이다. `테이블을 둘`로 나누면 두 테이블을 동시에 비교하면서 봐야한다는 단점이 있다. 이런 단점은 MySQL의 문법으로 해결할 수 있다. 마치 결합된 것처럼 읽어와 출력하는 것이다.
+
+
+## JOIN - 두개의 TABLE을 하나로 합쳐 읽기
+ 위의 두 테이블(author, topic)을 합치는 방법이다.
+
+ ```
+ SELECT * FROM topic LEFT JOIN author ON topic.author_id = author.id;
+ ```
+
+ topic 테이블을 기준으로 조건(ON)에 따라 topic 테이블의 author_id와 author 테이블의 id가 같은 것끼리 합치는 것이다.
+
+ **결과 table**  
+ |id|title|description|author_id|id|name|profile|
+ |----|-----|---------|------|--|--|--|
+ |1|MySQL|MySQL is ...|1|1|haeun|student|
+ |2|Oracle|Oracle is ...|1|1|haeun|student|
+ |5|MongoDB|MongoDB is ...|1|1|haeun|student|
+ |3|SQL Server|SQL server is ...|2|2|duru|database administrator|
+ |4|PostgreSQL|PostgreSQL is ...|3|3|hahh|data scientist|
+ 
