--- a/_posts/2021-02-07-DP.md
+++ b/_posts/2021-02-07-DP.md
@@ -29,3 +29,16 @@ k-익명성, L-다양성의 취약한 부분을 보완하기위해 등장
  **입실론 - DP**  
  ![DP](/TIL/assets/images/DP(2).png)  
  ![DP](/TIL/assets/images/DP(3).png)  
+
+ **입실론 - LDP**
+ * 위의 DP와는 달리 Untrusted server 에서 정의
+ * randomized response 매커니즘 이용  
+
+    ```
+    Q : 마약을 한적이 있나?
+
+    A : 동전을 던져 앞면이 나오면 무조건 yes라 대답
+                    뒷면이 나오면 사실대로 대답
+    ==> 실제로 마약을 해서 yes라 대답했는지, 
+            동전을 던져 앞면이 나와서 yes라 대답했는지 구분할 수 없음
+    ```
