--- a/_posts/webhacking/basics/PHP/2021-02-02-PHP(5).md
+++ b/_posts/webhacking/basics/PHP/2021-02-02-PHP(5).md
@@ -64,5 +64,24 @@ WebHacking 기초 - PHP(5)
     }
  ?>
  ```
+ 
+ ![basename 방어](/TIL/assets/images/filepathDefense.PNG)  
+
+ 이 외에도 파일을 삭제할 때 어떤일이 일어나는지 웹브라우저의 개발자 도구를 통해 알 수 있다. 웹브라우저의 inspection > network > Preserve log를 키면 서버와 주고받는 정보를 볼 수 있다. 이를 통해 삭제할 때 delete_process를 실행하고 post방식으로 id값을 전달한다는 것을 알 수 있다.  
+ ![파일 삭제 로그](/TIL/assets/images/fileDeleteLog.PNG)  
+
+ 이를 이용해 id값을 변경하여 다른 파일들을 삭제할 수 있다. 이것을 막기위해 위와 마찬가지로 basename함수를 이용한다.
+
+ ```php
+ //delete_process.php
+ <?php
+ unlink('data/'.basename($_POST['id']));
+ header('Location: /index.php');
+ ?>
+ ```
 
 
+---
+나중에 공부할 것
+* 로그인 기능 - session 회원마다 다른권한
+* 다른 기업의 인증시스템 이용 - federation authentication 회사명
