--- a/_posts/2021-02-07-DP.md
+++ b/_posts/2021-02-07-DP.md
@@ -42,3 +42,7 @@ k-익명성, L-다양성의 취약한 부분을 보완하기위해 등장
     ==> 실제로 마약을 해서 yes라 대답했는지, 
             동전을 던져 앞면이 나와서 yes라 대답했는지 구분할 수 없음
     ```
+
+## laplace mechnism
+ ![DP](/TIL/assets/images/laplaceMech.PNG)  
+ ![DP](/TIL/assets/images/laplaceMechn.PNG)  
